[iOS] Fix steady view highlight animation duration

This CL changes the duration of the steady view highlight
fade-out animation duration to be longer.

Bug: 898951
Change-Id: I33ce83968894ad363976cf25a1320fbef094a7e1
Reviewed-on: https://chromium-review.googlesource.com/c/1362893
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Robbie Gibson <rkgibson@google.com>
Cr-Commit-Position: refs/heads/master@{#613933}
Former-commit-id: 1dca156ed5078a990c7692dc166ffb8e7e73814a